# fastapizero

./: pyproject.toml
migrations/: env.py
migrations/versions/: 1132d4d37219_create_users_table.py
src/fastapizero/: app.py  database.py  example.env  schemas.py  security.py  settings.py
src/fastapizero/routers/: auth.py  users.py
tests/: conftest.py  test_app.py  test_auth.py  test_db.py  test_security.py  test_users.py
