[project]
name = "fastapizero"
version = "0.1.0"
description = "Aprendendo FastAPI do Zero"
readme = "README.md"
requires-python = "==3.12.*"
dependencies = [
    "ignr>=2.2",
    "fastapi[all]>=0.112.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "ruff>=0.6.1",
    "pytest>=8.3.2",
    "taskipy>=1.13.0",
    "pytest-cov>=5.0.0",
]

[tool.ruff]
line-length = 79
extend-exclude = ["migrations"]

[tool.ruff.lint]
preview = true
select = ['I', 'F', 'E', 'W', 'PL', 'PT']

[tool.ruff.format]
preview = true
quote-style = 'single'

[tool.pytest.ini_options]
pythonpath = '.'
addopts = '-p no:warnings'

[tool.taskipy.tasks]
run= "fastapi dev src/fastapizero/app.py"
lint = "ruff check . && ruff check . --diff"
format = "ruff check . --fix & ruff format ."

pre_test = "task lint"
test = "pytest --cov=src -vv"
post_test = "coverage html"
